[package]
name = "readable_url"
authors=["Kay Rhodes <masukomi@masukomi.org>", "Jonas Kalderstam <jonas@cowboyprogrammer.org>"]
description="Simplify URL content with Readability & optionally convert to Markdown."
homepage="https://github.com/masukomi/readable_url"
documentation="https://github.com/masukomi/readable_url"
repository="https://github.com/masukomi/readable_url"
readme="README.md"
keywords=["html", "url", "plaintext", "markdown", "converter", "readability"]
categories=["parsing", "text-processing", "command-line-utilities"]
license-file="LICENSE.md"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = "2.20.5"
html5ever = "0.13.0"
html5ever-atoms = "0.2.0"
readability = "^0"
tendril = "0.2.3"

[[bin]]
path = "src/main.rs"
name = "readable_url"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
